--- a/server/web/encrypt.html
+++ b/server/web/encrypt.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TimeLock — Encrypt</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Bebas+Neue&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -339,6 +341,43 @@
     <div class="header-sub">en.yourdomain.com — Encrypt Endpoint</div>
   </div>
   <div class="header-badge">AES-256-GCM</div>
+  <div style="margin-left:auto; align-self:center; display:flex; flex-direction:column; align-items:flex-end; gap:6px;">
+
+    <!-- Repo link -->
+    <a href="https://github.com/justadoll/AES_Time_Crypt" target="_blank" rel="noopener" style="
+      display:flex; align-items:center; gap:8px;
+      background:var(--yellow); color:var(--black);
+      border:2px solid var(--black); box-shadow:4px 4px 0 var(--black);
+      font-family:'Bebas Neue',sans-serif; font-size:15px; letter-spacing:2px;
+      text-decoration:none; padding:5px 14px;
+      transition:transform .1s, box-shadow .1s;
+    " onmouseover="this.style.transform='translate(-2px,-2px)';this.style.boxShadow='6px 6px 0 #0a0a0a'"
+       onmouseout="this.style.transform='';this.style.boxShadow='4px 4px 0 #0a0a0a'">
+      <svg height="14" width="14" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>
+      justadoll/AES_Time_Crypt
+    </a>
+
+    <!-- Authors badge -->
+    <div style="
+      display:flex; align-items:center; gap:5px;
+      font-family:'Space Mono',monospace; font-size:10px;
+      letter-spacing:0.5px; color:#555;
+    ">
+      made with <span style="color:#e94560;font-size:12px;">❤️</span> by
+      <a href="https://github.com/justadoll" target="_blank" rel="noopener" style="
+        color:var(--black); font-weight:700; text-decoration:none;
+        border-bottom:2px solid var(--yellow);
+        transition:color .1s;
+      " onmouseover="this.style.color='#7c3aed'" onmouseout="this.style.color='#0a0a0a'">@justadoll</a>
+      <span style="color:#ccc">&</span>
+      <a href="https://github.com/santiagz" target="_blank" rel="noopener" style="
+        color:var(--black); font-weight:700; text-decoration:none;
+        border-bottom:2px solid var(--yellow);
+        transition:color .1s;
+      " onmouseover="this.style.color='#7c3aed'" onmouseout="this.style.color='#0a0a0a'">@santiagz</a>
+    </div>
+
+  </div>
 </header>
 
 <main>
